--- a/apps/betday/src/index.css
+++ b/apps/betday/src/index.css
@@ -1,24 +1,27 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+@import "@repo/tailwind-config";
+@import "@repo/ui/styles.css";
 
-@layer base {
+:root {
+  --foreground-rgb: 0, 0, 0;
+  --background-start-rgb: 214, 219, 220;
+  --background-end-rgb: 255, 255, 255;
+}
+
+@media (prefers-color-scheme: dark) {
   :root {
-    --theme-color: #303030ff;
-    --footer-nav-active: #2f5c79;
-    --back: #9ae0ff;
-    --back1: #9ee0fd;
-    --back2: #cfeefd;
-    --lay: #fba4a8;
-    --lay1: #f6a8b8;
-    --lay2: #f6c7d6;
-    --text-color1: #02383f;
-    --yellow-1: #ffb80c;
-    --even-bg: #f0fffc;
-    --black-bg: #000;
-    --bg-light: #202020;
-    --bg-white: #ffffff;
-    --shadow-color: #4c555e;
-
+    --foreground-rgb: 255, 255, 255;
+    --background-start-rgb: 0, 0, 0;
+    --background-end-rgb: 0, 0, 0;
   }
+}
+
+body {
+  color: rgb(var(--foreground-rgb));
+  background: linear-gradient(
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
 }
