--- a/apps/betdaypro/src/index.css
+++ b/apps/betdaypro/src/index.css
@@ -1,24 +1,1 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@layer base {
-  :root {
-    --theme-color: #303030ff;
-    --footer-nav-active: #2f5c79;
-    --back: #9ae0ff;
-    --back1: #9ee0fd;
-    --back2: #cfeefd;
-    --lay: #fba4a8;
-    --lay1: #f6a8b8;
-    --lay2: #f6c7d6;
-    --text-color1: #02383f;
-    --yellow-1: #ffb80c;
-    --even-bg: #f0fffc;
-    --black-bg: #000;
-    --bg-light: #202020;
-    --bg-white: #ffffff;
-    --shadow-color: #4c555e;
-
-  }
-}
+@import "@repo/ui/dist/index.css";
